# community-notes-ai-writer-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_imports.py  debug_request.py  init_db.py  lab.sqlite3  main.py  pyproject.toml  reproduce_error.py  reset_db.py  test_evaluate.py  test_grok.py  test_practice_workflow.py
note_writer_lab/: __init__.py  admission_engine.py  agents.py  analytics.py  cli.py  config.py  db.py  evaluator.py  grok_client.py  intel.py  lab_runner.py  list_misleading_tags.py  metrics.py  models.py  prompts.py  rag_engine.py  researcher.py  schemas.py  simulator.py  tags.py  web.py  x_client.py
note_writer_lab/templates/: base.html  simulation_result.html  simulator_home.html  writer_detail.html  writers.html
scripts/: benchmark_simulator.py  check_agents.py  check_analytics.py  check_intel.py  check_rag.py  check_threat_engine.py  ingest_gold_standard.py  ingest_real_data.py  inspect_data.py
tests/: test_admission_flow.py  test_calibration.py  test_simulator.py  test_tags_misleading_tags.py  test_x_client_payload.py
